[package]
name = "davbjor-chess-gui"
version = "1.0.0"
edition = "2021"

[dependencies]
viering-chess = { git = "https://github.com/INDA24PlusPlus/viering-chess.git" }
chess-networking = { git = "https://github.com/INDA24PlusPlus/chess-networking.git" }
rmp-serde = "1.3.0"
serde = "1.0.210"
serde_derive = "1.0.210"
ggez = "0.9.3"
